@@ -1,3 +1,8 @@
+2006-01-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
+	* libvncserver/{main.c,rfbserver.c}: fix timely closing of clients;
+	  the client iterator in rfbProcessEvents() has to iterate also
+	  over clients whose sock < 0. Noticed by Karl.
+
 2006-01-08  Karl Runge <runge@karlrunge.com>
 	* x11vnc: the big split. (and -afteraccept and -passwdfile read:..)
 	* examples/pnmshow24.c: fix typo.
